--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "html2canvas-pro": "^1.5.11",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
